--- a/_layouts/isaipost.html
+++ b/_layouts/isaipost.html
@@ -143,6 +143,9 @@ Reserved</div>
 "author":"Tentrockers"
 }
 </script>
+	<script>
+    new kwgVideo('#video1');
+</script>
 	   
 	    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',3762709,document.body||document.documentElement)</script>
     
