--- a/_layouts/isaipost.html
+++ b/_layouts/isaipost.html
@@ -65,7 +65,7 @@ border : 1px solid silver;
 
 <div class="line">Watch {{ page.title }} Online</div>
 	
-	<video id="video1" width="100%" height="auto" controls>
+	<video id="video1" width="700px" height="auto" controls>
             <source src="{{ page.video }}" type="video/mp4">
             Follow Telegram @isaiminidownload.
         </video>
