--- a/_layouts/isaihome.html
+++ b/_layouts/isaihome.html
@@ -1,101 +1,80 @@
 <html>
 <head>
-	    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="propeller" content="baffe76c4eb5e206ad58d133589e39e3">
-    <meta name="google-site-verification" content="kjAvdJw68H8gWJWa87eyhW3p-vIGYk2oMdOIE8ngq7g" />
+<meta name="language" content="en-us" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>{{ site.title }}</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="Download and Watch Latest Tamil Telugu Hindi Malayalam Movies" />
+<meta name="distribution" content="Global" />
+<meta name="rating" content="General" />
+<meta name="robots" content="index, follow" />
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+<style>
+body {padding: 0; margin:0 auto; max-width: 700px; font-family: Verdana; font-weight: normal; background: #f9f9f9; font-size: 13px;}
+a {text-decoration : none; color: #3b3b3b;}
+a {color:#3b3b3b;}
+input,textarea,select{margin:1px;border:1px solid #ddd;max-width:80%;background:#fff;color:grey;font-size:small;}
+input[type='submit']{color : #6d6d6d;
+background-color : #fbfbfb;
+background-repeat : repeat-x;
+border : 1px solid #ededed;margin:1px;}
+input:hover, input:focus{  -moz-box-shadow: 0 0 10px #6699ff;
+-webkit-box-shadow: 0 0 10px #6699ff;
+box-shadow: 0px 0px 10px #6699ff;}
+.line{background-color: #308bcf; color: #ffffff;  font-weight: bold; padding: 10px 10px 10px 10px; text-align: center; text-decoration: none; margin-bottom: 0px; font-size: small;}
+.Adz {color: red; font-weight: bold; font-size: small;
+}
+.Adz a { color:  red;}
+.aut{border-radius:8px; color:#fff; padding:5px 5px; border-color:#95d1ec; border-style:groove ridge ridge groove; border-width:2px; background:#36a8da repeat-x 50%top}
+.aut:before{height:25px; margin-top:-4px; margin-bottom:-19px; display:block;}
+.aut a{color:#fff; border-bottom:1px dotted #b5def0}
+.aut a:hover{color:#d8eff8; border-bottom:1px dotted #b5def0; background:transparent}
+.Tag{padding: 3px; background-color: #eff3f6;}
+.form{margin: 1px; padding: 3px;  border: 1px solid #ececec; }
+.Adz a img{ height:auto; width:auto; max-width:99% }
+.none{display:noe}
+ .isaimini a img {display:one }
+.f {color: #4f4f4f ; background: #f9f9f9; padding-top: 8px; padding-left: 3px; padding-bottom: 2px; font-size: 14px; text-align: left; border-bottom: 1px dotted #afcddc; }
+.tblimg {padding:1px 1px 2px 2px;
+text-align : left;
+}
+.tblimg img {padding:1px;
+border : 1px solid silver;
+}
+.isaiminida{margin: 1px; padding: 3px; border: 1px solid #ececec; }
+.isaiminida a { color:  red;}
+.bg{border-left: 4px solid #c3eff2; padding: 0 0 4px 6px; margin: 0 2px 0 4px;}
+.bf { border-left: 4px solid #c3eff2; padding: 0 0 4px 6px; margin: 0 2px 0 4px; }
+.bottom { color: #d26c24; background: #ede9dd; position: relative; z-index: 1; font-weight: bold; padding: 10px; border-bottom: 1px solid #ddd7c6; text-shadow: 0px 1px 0px #ffffff; box-shadow: inset 0px 1px 0px rgba(255,255,255,0.4); -moz-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.4); -webkit-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.4); }
+.de { background-color: #f1f1f1; color: #444444; padding: 3px; font-size: 13px; font-family: arial,sans-serif; margin-top: 0px; margin-bottom: 0px; padding-left: 5px; padding-top: 5px; }
+.ok, .msg { background: #fff8cc; border: 1px solid #ffe222; padding: 10px; font-weight: normal; color: #000; }
+.error { background: #fff8cc; border: 1px solid #ffe222; padding: 10px; font-weight: normal; color: red; }
+.isai { background-color: #f1f1f1; color: #444444; padding: 3px; font-size: 13px; font-family: arial,sans-serif; margin-top: 0px; margin-bottom: 0px; padding-left: 5px; padding-top: 5px; }
+</style>
+</head>
+<body>
+<div class="line"><font size="4px">{{ site.name }}</font><br/><small>Name Of Quality</small></div>
+<div class="bottom" align="center">Like our <a href="https://facebook.com/isaimini.co"><font color="red">Facebook Fan Page</font></a> & Get Updates and News!
+<div class="Adz">
+</div>
+</div>
 
-    {% assign title = '' %}
-    {% if page.layout == 'author' %}
-        {% assign title = page.display_name %}
-    {% elsif page.title %}
-        {% assign title = page.title | append: " | " | append: site.name %}
-    {% else %}
-        {% assign title = site.title %}
-    {% endif %}
+<div class="line">Recent Updates</div>
 
-    {% assign image = '' %}
-    {% if page.image %}
-        {% assign image = page.image %}
-    {% else %}
-        {% assign image = "/assets/img/blog-image.png" | prepend: site.baseurl | prepend: site.url %}
-    {% endif %}
 
-    {% assign description = '' %}
-    {% if page.description %}
-        {% assign description = page.description | strip_html | strip_newlines | truncate: 160 %}
-    {% else %}
-        {% assign description = site.description %}
-    {% endif %}
 
-    {% assign url = '' %}
-    {% if paginator.page_trail %}
-        {% assign url = paginator.first_page_path | replace:'index.html','' | prepend: site.baseurl | prepend: site.url %}
-    {% else %}
-        {% assign url = page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url %}
-    {% endif %}
 
-    <title>{{ title }}</title>
-    <meta name="description" content="{{ description }}">
-    {% if page.tags %}
-        <meta name="keywords" content="{{ page.tags | join: ', ' }}">
-    {% endif %}
 
-    <!-- Social: Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="{{ title }}">
-    <meta name="twitter:description" content="{{ description }}">
-    <meta property="twitter:image:src" content="{{ image }}">
-    {% if site.twitter_username %}
-        <meta name="twitter:site" content="@{{ site.twitter_username }}">
-    {% endif %}
 
-    <!-- Social: Facebook / Open Graph -->
-    <meta property="og:url" content="{{ url }}">
-    <meta property="og:title" content="{{ title }}">
-    <meta property="og:image" content="{{ image }}">
-    <meta property="og:description" content="{{ description }}">
-    <meta property="og:site_name" content="{{ site.title }}">
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon" />
-    
-    <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/img/icons/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/icons/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/icons/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/icons/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/img/icons/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/icons/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/img/icons/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/icons/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/icons/apple-touch-icon-152x152.png" />
+<div class="bottom" align="center">
+<div class="Adz">
+</div>
+</div>
+<div class="line"> © Tentrockers<br/>All Right Reserved</div>
 
-    <!-- Windows 8 Tile Icons -->
-    <meta name="application-name" content="{{ site.name }}">
-    <meta name="msapplication-TileColor" content="#141414">
-    <meta name="msapplication-square70x70logo" content="smalltile.png" />
-    <meta name="msapplication-square150x150logo" content="mediumtile.png" />
-    <meta name="msapplication-wide310x150logo" content="widetile.png" />
-    <meta name="msapplication-square310x310logo" content="largetile.png" />
-    
-    <!-- Android Lolipop Theme Color -->
-    <meta name="theme-color" content="#141414">
-	    <link rel="stylesheet" href="{{ '/assets/css/isai.css' | prepend: site.baseurl }}">
-    <link rel="canonical" href="{{ url }}">
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}" />
-	</head>
-	<body>
-		<div class="line"><font size="4px">{{ site.name }}</font><br/><small>Name Of Quality</small></div>
-		    {% include sbox.html %}
-		<div class="line">Recent Updates</div>
-	        {% include hrecent.html %}
-                	      
-<div class="line">Tags</div>
-<div class="Tag"><font color="green">TamilRockers Movies Download TamilRockers Tamil 2020 Movies Download TamilYaya.net Tamil Mp4 Movies Download Tamil 720p Movies Download,Moviesda 2020 HD Movies Download, Moviesda Tamil Movies Download, MyMoviesda Tamil 1080p HD Movies Download HDMoviesda.Com Moviesda 2019 Mobile Movies Download Tamil HD Movies Download Tamil 720p 1080p HD Movies Download Isaimini New Movies Download</font></div>		  
-{% include bottom.html %}
-		<div class="line"> © {{ site.name }}<br/>All Right
-Reserved</div>
-<script data-cfasync="false" async type="text/javascript" src="//bulletprofitpop.com/display/items.php?30343&5287&0&0&4&9"></script>
-	</body>
+
+
+
+</body>
+</html>
