--- a/_layouts/isaihome.html
+++ b/_layouts/isaihome.html
@@ -76,7 +76,7 @@ border : 1px solid silver;
 
 {% for post in paginator.posts %}
 
-<div style=" text-transform: capitalize;" class="f"><font color="red">[{{ post.layout }}]</font> <b  >{{ post.title }}</b> <a href="{{ BASE_PATH }}{{ post.url }}"> <span  style="color: green;">Download Now</span></a></div>
+<div style=" text-transform: capitalize;" class="f"> <b>{{ post.title }} ({{ post.year }}) [{{ post.quality }}] </b> Latest {{ post.language }} Movie Download HD Movie Mp4 HD <a href="{{ BASE_PATH }}{{ post.url }}"><span style="color: green;">Download Now</span></a></div>
 
 
 {% endfor %}  
