--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -138,11 +138,13 @@ border : 1px solid silver;
                         {% endif %}
                     {% endfor %}
         
-<div class="Tag"><font color="green">{{page.title}} TamilRockers Download {{page.title}} Tamil Movie TamilRockers Download TamilRockers {{page.title}} Download {{page.title}} Mp4 Download TamilYaya.Net</font></div><div class="Adz" align="center"></div><div class="bottom"><a href="/">Home</a>
+<div class="line">
+	<font color="green">{{page.title}} TamilRockers Download {{page.title}} Tamil Movie TamilRockers Download TamilRockers {{page.title}} Download {{page.title}} Mp4 Download TamilYaya.Net</font></div>
+	    <div class="Adz" align="center"></div>
+	    
 
 		
-<div class="line"> © {{ site.name }}<br/>All Right
-Reserved</div>
+<div class="line"> © {{ site.name }}<br/>All Right Reserved</div>
     </body>
 </html>
 
