--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -138,8 +138,8 @@ border : 1px solid silver;
                         {% endif %}
                     {% endfor %}
         
-<div class="line">
-	<font color="green">{{page.title}} TamilRockers Download {{page.title}} Tamil Movie TamilRockers Download TamilRockers {{page.title}} Download {{page.title}} Mp4 Download TamilYaya.Net</font></div>
+<div class="line">Tags</div>
+	<font color="green">{{page.title}} TamilRockers Download {{page.title}} Tamil Movie TamilRockers Download TamilRockers {{page.title}} Download {{page.title}} Mp4 Download TamilYaya.Net</font>
 	    <div class="Adz" align="center"></div>
 	    
 
