--- a/_layouts/isaihome.html
+++ b/_layouts/isaihome.html
@@ -108,37 +108,16 @@ border : 1px solid silver;
         {% assign limit = 8 %}
         {% for post in posts limit: limit %}
             {% assign author = site.authors | where: "name", post.author | first %}
-            {
-                "@type": "BlogPosting",
-                "name": "{{ post.title }}",
-                "headline": "{{ post.subtitle }}",
-                "description": "{{ post.description }}",
-                "image": "{{ post.image }}",
-                "url": "{{ post.url | prepend: site.baseurl | prepend: site.url }}",
-                "inLanguage": "{{ site.language }}",
-                "dateCreated": "{{ post.date | date: '%Y-%m-%d/' }}",
-                "datePublished": "{{ post.date | date: '%Y-%m-%d/' }}",
-                "dateModified": "{{ post.date | date: '%Y-%m-%d/' }}",
-                "author": {
-                    "@type": "Person",
-                    "name": "{{ author.display_name }}",
-                    "url": "{{ author.url | prepend: site.baseurl | prepend: site.url }}"
-                },
-                "publisher": {
-                    "@type": "Organization",
-                    "name": "{{ site.name }}",
-                    "url": "{{ site.url }}{{site.baseurl}}/",
-                    "logo": {
-                        "@type": "ImageObject",
-                        "url": "{{ site.url }}{{site.baseurl}}/assets/img/blog-image.png",
-                        "width": "600",
-                        "height": "315"
-                    }
-                },
-                "mainEntityOfPage": "True",
-                "genre": "{{ post.category | capitalize }}",
-		        "articleSection": "{{ post.category | capitalize }}",
-                "keywords": [{{ post.tags | join: '","' | append: '"' | prepend: '"' }}]
+           {"@context":"https://schema.org",
+"@type":"VideoObject",
+"description":"Watch {{ page.title }} on {{ site.title }} and Download Free",
+"duration":"PT1H56M0S",
+"embedUrl":"{{ page.video }}",
+"name":"{{ page.title }}",
+"thumbnailUrl":["{{ page.poster }}"],
+"uploadDate":"{{ page.date | date: '%Y-%m-%d/' }}",
+"genre":"Entertainment",
+"author":"Tentrockers"
             }{% if forloop.last == false  %},{% endif %}
         {% endfor %}
         ]
