--- a/_layouts/isaihome.html
+++ b/_layouts/isaihome.html
@@ -103,6 +103,7 @@ border : 1px solid silver;
 	
 	<script type="application/ld+json">
 	{
+	      "@context": "https://schema.org",
         "@type": "ItemList",
         "itemListElement": [
         {% assign limit = 8 %}
