--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -40,7 +40,7 @@
         {% assign url = page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url %}
     {% endif %}
 
-    <title>{{ title }}</title>
+    <title>{{ page.title }} Movie Collection Watch and Download</title>
     <meta name="description" content="{{ description }}">
     {% if page.tags %}
         <meta name="keywords" content="{{ page.tags | join: ', ' }}">
