--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -133,6 +133,9 @@ border : 1px solid silver;
     </head>
     <body class="main-page has-push-menu">
         <div class="line"><font size="4px">{{ site.name }}</font><br/><small>Name Of Quality</small></div>
+	    <script async src="https://cse.google.com/cse.js?cx=159b3362f706a3d04"></script>
+<div class="gcse-search"></div>
+<div class="line">Tamilblasters</div>
 {% for post in paginator.category %}
                     {% assign posts = site.posts | where_exp:"post","post.is_generated != true" %}
 	    
