--- a/_layouts/isaihome.html
+++ b/_layouts/isaihome.html
@@ -65,7 +65,9 @@ border : 1px solid silver;
 </head>
 <body>
 <div class="line"><font size="4px">{{ site.name }}</font><br/><small>Name Of Quality</small></div>
-<div class="bottom" align="center">Like our <a href="https://facebook.com/isaimini.co"><font color="red">Facebook Fan Page</font></a> & Get Updates and News!
+<div class="bottom" align="center">
+	<script async src="https://cse.google.com/cse.js?cx=159b3362f706a3d04"></script>
+<div class="gcse-search"></div>
 <div class="Adz">
 </div>
 </div>
