--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -133,8 +133,13 @@ border : 1px solid silver;
     </head>
     <body class="main-page has-push-menu">
         <div class="line"><font size="4px">{{ site.name }}</font><br/><small>Name Of Quality</small></div>
-	    <script async src="https://cse.google.com/cse.js?cx=159b3362f706a3d04"></script>
-<div class="gcse-search"></div>
+	   <div class="bottom" align="center">
+	    <div class="serachbox" align="center"> <form action="http://google.com/m/search">
+		    <input type="text" name="q" size="25%" maxlength="500" value=""/>
+		    <input type="hidden" name="as_sitesearch" value="{{ site.url }}"/>
+		    <br/><input type="submit" value="Search"/></form>
+		   </div></div>
+	    
 <div class="line">Tamilblasters</div>
 
                     {% assign posts = site.posts | where_exp:"post","post.is_generated != true" %}
