--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -134,8 +134,9 @@ border : 1px solid silver;
     <body class="main-page has-push-menu">
         <div class="line"><font size="4px">{{ site.name }}</font><br/><small>Name Of Quality</small></div>
 	   <div class="bottom" align="center">
+		   Follow our <a href="https://telegram.im/@isaiminidownload?lang=en"><font color="red">Telegram Channel</font></a> & Get Updates and Movies! 
 	    <div class="serachbox" align="center"> <form action="http://google.com/m/search">
-		    <input type="text" name="q" size="25%" maxlength="500" value=""/>
+		    <input type="text" style=" border: 2px solid; " name="q" size="25%" maxlength="500" value=""/>
 		    <input type="hidden" name="as_sitesearch" value="{{ site.url }}"/>
 		    <br/><input type="submit" value="Search"/></form>
 		   </div></div>
