--- a/_layouts/isaihome.html
+++ b/_layouts/isaihome.html
@@ -66,8 +66,12 @@ border : 1px solid silver;
 <body>
 <div class="line"><font size="4px">{{ site.name }}</font><br/><small>Name Of Quality</small></div>
 <div class="bottom" align="center">
-	<script async src="https://cse.google.com/cse.js?cx=159b3362f706a3d04"></script>
-<div class="gcse-search"></div>
+Follow our <a href="https://telegram.im/@isaiminidownload?lang=en"><font color="red">Telegram Channel</font></a> & Get Updates and Movies! 
+	    <div class="serachbox" align="center"> <form action="http://google.com/m/search">
+		    <input type="text" style=" border: 2px solid; " name="q" size="25%" maxlength="500" value=""/>
+		    <input type="hidden" name="as_sitesearch" value="{{ site.url }}"/>
+		    <br/><input type="submit" value="Search"/></form>
+		   </div>
 <div class="Adz">
 </div>
 </div>
