--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -110,6 +110,17 @@ border : 1px solid silver;
   </tr>
 </tbody></table></div></div>
 
+	
+	<ul>
+  {% for item in page.coldi %}
+    {% if item.title and item.url %}
+      <li>
+        <a href="{{ site.url }}{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
+      </li>
+    {% endif %}
+  {% endfor %}
+</ul>
+	
 
 <div class="line">Download {{ page.title }}</div>
 <div class="f" title="{{ page.title }} {{ page.year }} {{ page.language }} {{ page.quality }}">
