--- a/_layouts/isaipost.html
+++ b/_layouts/isaipost.html
@@ -139,6 +139,7 @@ Reserved</div>
 "@type":"VideoObject",
 "description":"Watch {{ page.title }} on {{ site.title }} and Download Free",
 "duration":"PT1H56M0S",
+"contentUrl":"{{ page.video }}",
 "embedUrl":"{{ page.video }}",
 "name":"{{ page.title }}",
 "thumbnailUrl":["{{ page.poster }}"],
